[gd_scene load_steps=7 format=2]

[ext_resource path="res://game-sprites-1x.png" type="Texture" id=1]
[ext_resource path="res://Suelo.gd" type="Script" id=2]
[ext_resource path="res://Scene/ParallaxBackground.gd" type="Script" id=3]
[ext_resource path="res://Scene/Nubes.gd" type="Script" id=4]
[ext_resource path="res://Scene/Dinosaur.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scene/Floor.tscn" type="PackedScene" id=6]

[node name="Game" type="Node2D"]
position = Vector2( -1, 0 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground"]
margin_right = 1023.0
margin_bottom = 598.0

[node name="Suelo" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Suelo" type="Sprite" parent="Suelo"]
position = Vector2( 1338, 500 )
scale = Vector2( 1.02667, 1 )
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 2, 54, 1200, 12 )

[node name="Suelo2" type="Sprite" parent="Suelo"]
position = Vector2( 0, 500 )
scale = Vector2( 1.115, 1 )
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 2, 54, 1200, 12 )

[node name="Nubes" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Nubes"]
position = Vector2( 50, 100 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 90, 2, 42, 13 )

[node name="Sprite2" type="Sprite" parent="Nubes"]
position = Vector2( 250, 250 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 90, 2, 42, 13 )

[node name="Sprite3" type="Sprite" parent="Nubes"]
position = Vector2( 500, 150 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 90, 2, 42, 13 )

[node name="Sprite4" type="Sprite" parent="Nubes"]
position = Vector2( 800, 100 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 90, 2, 42, 13 )

[node name="Sprite5" type="Sprite" parent="Nubes"]
position = Vector2( 1100, 180 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 90, 2, 42, 13 )

[node name="Sprite6" type="Sprite" parent="Nubes"]
position = Vector2( 1500, 100 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 90, 2, 42, 13 )

[node name="Sprite7" type="Sprite" parent="Nubes"]
position = Vector2( 1800, 250 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 90, 2, 42, 13 )

[node name="Sprite8" type="Sprite" parent="Nubes"]
position = Vector2( 2300, 175 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 90, 2, 42, 13 )

[node name="Dinosaur" parent="." instance=ExtResource( 5 )]

[node name="Floor" parent="." instance=ExtResource( 6 )]
